fixed spacing of letters

--- a/src/styles.css
+++ b/src/styles.css
@@ -462,7 +462,7 @@ input:checked + .background-slider:before {
 }
 
 .education-expanded {
-  padding-left: 125px;
+  /* padding-left: 125px; */
 }
 
 .svgIcon {
@@ -1374,6 +1374,10 @@ body {
 
   .education {
     padding-top: 0px;
+  }
+
+  .education-list-div {
+    width: 100%;
   }
 
   .education-container {
